updateEm
