# src/routes/userRouter.js
@@ -1,10 +1,17 @@
 const express = require("express");
 const userController = require("../controllers/user.controller");
+const validations = require("../middlewares/validations.middleware");
 
 const router = express.Router();
 
 router.get("/", userController.getUsersCtrl);
 router.get("/me", userController.getMeCtrl);
+
+router.put(
+  "/updateEventManager",
+  validations.updateEventManagerVal,
+  userController.updateEventManagerCtrl
+);
 
 // router.get("/:id", userController.getUserById);
 
